c-bindings/context.h

/* *** MOCS-COPYRIGHT-NOTICE-BEGIN ***
 *
 * This copyright notice is auto-generated by ./add-copyright-notice.
 * Additional copyright notices must be added below the last line of this notice.
 *
 * MoCS (https://lewis.cs.uni-saarland.de/tools/mocs/): "c-bindings/context.h".
 * The content of this file is copyright of Saarland University -
 * Copyright (C) 2009 Saarland University, Reactive Systems Group, Lars Kuhtz.
 *
 * This file is part of MoCS (https://lewis.cs.uni-saarland.de/tools/mocs/).
 *
 * License: three-clause BSD style license.
 * The license text can be found in the file LICENSE.
 *
 * *** MOCS-COPYRIGHT-NOTICE-END *** */

#ifndef _CONTEXT_H_
#define _CONTEXT_H_

#ifdef __cplusplus
#include "expr.hh"
namespace c { namespace context
{
    struct context_t
    {
        context_t(efac_ptr e) : impl(e) {}
        efac_ptr impl;
    };

}; };
#else
struct context_t;
#endif

#ifdef __cplusplus
extern "C" {
#endif

#ifdef __cplusplus
typedef struct c::context::context_t* context_ptr;
#else
typedef struct context_t* context_ptr;
#endif

// constructors/ destructors
context_ptr new_context();
void free_context(context_ptr);

int context_size(const context_ptr);

#ifdef __cplusplus
}
#endif

#endif // _CONTEXT_H_